[package]
name = "rtor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["compat"] }
futures = "0.3.14"
anyhow = "1.0.23"
cfg-if = "1.0.0"

fast-socks5 = "0.8.1"
arti-client = "0.5.0"
tor-rtcompat = "0.5.0"

