[package]
name = "rtor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["compat"] }
futures = "0.3.14"
anyhow = "1.0.23"
cfg-if = "1.0.0"
parking_lot = "=0.11.2"

tracing = "0.1.18"
tracing-appender = "0.2.0"
tracing-journald = { version = "0.3.0", optional = true }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

async-channel = "1.7.1"
# concurrent-queue = "1.2.2"
# event-listener = "2.4.0"
# futures-core = "0.3.5"

rand = "0.8.5"
base64 = "0.13.0"
strum = { version = "0.24", features = ["derive"] }

serde = { version = "=1.0.126", features = ["rc"] } 
serde_derive = "=1.0.126"
serde_json = "=1.0.65"

fast-socks5 = "0.8.1"
tokio-stream = "0.1.9"
socks5-proto = "0.3.2"
hyper = { version = "0.14.20", features = [ "client", "http1", "http2", "tcp" ] }
bytes = "1.2.1"
# rustls = "0.20.6"
tokio-rustls = "0.23.4"
webpki-roots = "0.22.4"
lazy_static = "=1.4.0"

# arti-client = { version = "0.5.0", features = [ "dirfilter", "experimental-api" ]}
# tor-rtcompat = { version = "0.5.0", features = [ ]}
# tor-llcrypto = { version = "0.3.3", features = [ ]}
# tor-netdir = { version = "0.5.0", features = [ "experimental-api" ]}

arti-client = {  path = "../submodules/arti/crates/arti-client",  version = "0.5.0", features = [ "dirfilter", "experimental-api", "static" ]}
tor-rtcompat = { path = "../submodules/arti/crates/tor-rtcompat", version = "0.5.0", features = [ ]}
tor-llcrypto = { path = "../submodules/arti/crates/tor-llcrypto", version = "0.3.3", features = [ ]}
tor-netdir = {   path = "../submodules/arti/crates/tor-netdir", version = "0.5.0", features = [ "experimental-api" ]}
tor-netdoc = {   path = "../submodules/arti/crates/tor-netdoc", version = "0.5.0", features = [ ]}
tor-guardmgr = { path = "../submodules/arti/crates/tor-guardmgr", version = "0.5.0" }
tor-linkspec = { path = "../submodules/arti/crates/tor-linkspec", version = "0.4.0" }
tor-chanmgr = { path = "../submodules/arti/crates/tor-chanmgr", version = "0.5.0" }
tor-proto = { path = "../submodules/arti/crates/tor-proto", version = "0.5.0" }
tor-protover = { path = "../submodules/arti/crates/tor-protover", version = "0.3.0" }

# #  branch = "simon-hack1"
# arti-client = { git = "https://github.com/simon-fu/arti.git", rev = "9e391009", version = "0.5.0", features = [ "dirfilter", "experimental-api" ] }

# tor-rtcompat = { git = "https://github.com/simon-fu/arti.git", rev = "9e391009", version = "0.5.0", features = [ ] }

# tor-llcrypto = { git = "https://github.com/simon-fu/arti.git", rev = "9e391009", version = "0.3.3", features = [ ] }

# tor-netdir = { git = "https://github.com/simon-fu/arti.git", rev = "9e391009", version = "0.5.0", features = [ "experimental-api" ] }

# tor-netdoc = { git = "https://github.com/simon-fu/arti.git", rev = "9e391009", version = "0.5.0", features = [ ] }

# tor-guardmgr = { git = "https://github.com/simon-fu/arti.git", rev = "9e391009", version = "0.5.0", features = [ ] }

# tor-linkspec = { git = "https://github.com/simon-fu/arti.git", rev = "9e391009", version = "0.4.0", features = [ ] }


[features]
hack = []
